# dotfetch

./: CMakeLists.txt
include/: cpu_info.h  main.h
src/: cpu_info.cpp  main.cpp
